Fixes non-wrapping text issue in IE 10 & 11.

--- a/wp-content/themes/cmp/assets/styles/pages/_archives.scss
+++ b/wp-content/themes/cmp/assets/styles/pages/_archives.scss
@@ -30,6 +30,7 @@ body.carnegie-magazine-archive {
     }
 
     .text {
+      width: 100%;
       margin-bottom: $base-spacing;
       margin-right: $base-spacing;
     }
